# cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
airweave_cli/: config.py  main.py
airweave_cli/commands/: auth.py  collections.py  search.py  sources.py
airweave_cli/lib/: actions.py  output.py  prompts.py  spinner.py  tty.py
npm/: install.js  package.json
